# BACHELOR

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt
main/inc/: AHT21_ENS160.h  BME280.h  ENS160.h  main.h  soil_moisture.h
main/src/: AHT21_ENS160.c  BME280.c  ENS160.c  main.c  soil_moisture.c
